# cpp-server

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_utils.sh
.devcontainer/: devcontainer.json
docker/: docker-compose.cpp-server.yml
docker/cpp-server/: Dockerfile.cpp-server  alias.sh  env.sh
include/: chat_server.h  pch.h  types.h  xmpp.h
include/core/: server.h
lib/xxml/include/: xxml.h
lib/xxml/src/: xxml.cpp
src/: chat_server.cpp  main.cpp  xmpp.cpp
src/core/: server.cpp
